--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "hello-world"
+name = "task_manager"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-actix-cors = "0.7.0"
-actix-web = "4.9.0"
-async-trait = "0.1.87"
-dotenv = "0.15.0"
-reqwest = "0.12.12"
-serde = "1.0.218"
+actix-web = "4"
+actix-cors = "0.7"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+tokio = { version = "1", features = ["full"] }
